--- a/components.json
+++ b/components.json
@@ -10,7 +10,7 @@
         "prefix": ""
     },
     "aliases": {
-        "components": "@/components",
-        "utils": "@/lib/utils"
+        "components": "app/components",
+        "utils": "app/lib/utils"
     }
 }
