--- a/components.json
+++ b/components.json
@@ -4,13 +4,13 @@
     "tsx": true,
     "tailwind": {
         "config": "tailwind.config.js",
-        "css": "app/globals.css",
+        "css": "src/app/globals.css",
         "baseColor": "slate",
         "cssVariables": true,
         "prefix": ""
     },
     "aliases": {
-        "components": "app/components",
-        "utils": "app/lib/utils"
+        "components": "@/components",
+        "utils": "@/lib/utils"
     }
 }
